--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,9 @@
 <resources>
     <string name="app_name">news.az</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="search">Search</string>
+    <string name="searchEn">Search…</string>
+    <string name="searchRu">Поиск…</string>
+    <string name="searchAz">Axtar…</string>
     <string name="title_activity_scrolling">ScrollingActivity</string>
     <string name="large_text">
         "Material is the metaphor.\n\n"
@@ -97,4 +99,5 @@
     <string name="searchMenu">Search</string>
     <string name="otherNews">Другие новости</string>
     <string name="search_news">Search News</string>
+    <string name="menu">Menu</string>
 </resources>
